--- a/.github/workflows/Create Release for new Tag.yml
+++ b/.github/workflows/Create Release for new Tag.yml
@@ -16,9 +16,9 @@ jobs:
     steps:
     - name: Build
       id: build-action
-      uses: xADDBx/BuildOwlcatMod@v2
+      uses: xADDBx/BuildOwlcatMod@v3
       with:
-        GAME_NAME: RogueTrader
+        GAME_NAME: DarkHeresy
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GITHUB_NAME: ${{ github.repository_owner }}
         PACKAGE_OWNER: xADDBx
@@ -33,4 +33,4 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         artifacts: ${{ env.zipFilePath }}\*.zip
-        name: ${{ env.ZipFile }} built for Rogue Trader ${{ env.gameVersionNum }}${{ env.gameVersionSuffix }}
+        name: ${{ env.ZipFile }} built for Dark Heresy ${{ env.gameVersionNum }}${{ env.gameVersionSuffix }}
